# multi-agent

./: .gitignore  README.md  main.py  models.py  pyproject.toml  semantic_matcher.py
docs/: ARCHITECTURE.md
evaluation/: __init__.py  gsmhard_evaluator.py  merge_checkpoints.py  mmlu_pro_evaluator.py  runtime.py
llm/: llm_config.py  llm_interface.py
multi_agent_pool/: actions.py  agent_pool.py  personas.jsonl  workflow.py
pipelines/: __init__.py  multi_agent_pipeline.py
question_solution/: hungarian_algorithm.py  task_decomposer.py  task_executor.py
reporters/: __init__.py  console_reporter.py
result/: debug_idx8.json  execution_output.json  gsmhard_eval_output.json  gsmhard_eval_output_after_fix.json  mmlu_pro_eval_output.json
services/: __init__.py  action_selection.py  assignment_service.py  result_parsing.py  single_llm_solver.py
utils/: __init__.py  answer_utils.py  dataset_utils.py  dependency_utils.py  eval_visualization.py  utils.py
